--- a/AppFinancieraFront/src/components/UIComponents/Navbar/index.module.css
+++ b/AppFinancieraFront/src/components/UIComponents/Navbar/index.module.css
@@ -1,3 +1,4 @@
 .navFondo{
-    border-bottom: 5px solid #3AAE98
+    border-bottom: 5px solid #3AAE98;
+    overflow: hidden;
 }
